css/hhss.css
  
/*========================================================
	Author: Ruby Masciangelo
	happyhalehawaii.com
==========================================================
	GENERIC STYLES
==========================================================
    COLOR PALETTE
    Orange:  #e05e26
    Dark Blue:   #243466
    Light Yellow:   #f0e193
    Yellow:     #eecb31
========================================================*/
@-ms-viewport {
    width: extend-to-zoom;
    zoom: 1.0;
}

@viewport {
    zoom: 1.0;
    width: extend-to-zoom;
}

html {
	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
	font-size: 62.5%;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}

body {
	font-size: 18px;
	margin: 0;
	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
	line-height: 1.42857143;
}

/*================NAV============*/
#nav a {
    position: absolute; /* Position them relative to the browser window */
    left: -110px; /* Position them outside of the screen */
    transition: 0.3s; /* Add transition on hover */
    padding: 15px; /* 15px padding */
    width: 120px; /* Set a specific width */
    text-decoration: none; /* Remove underline */
    font-size: 20px; /* Increase font size */
    color: #f0e193; /* White text color */
    border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
    background-color: #243466;
}
  
#nav a:hover {
    left: 0; /* On mouse-over, make the elements appear fully */
}
  
#home {
    top: 20px;
}
  
#shop {
    top: 80px;
}
  
#about {
    top: 140px;
}
  
#policy {
    top: 200px;
}

#contact {
    top: 260px;
}


/*============HOME==========*/
.cover {
    background: url(./images/hh1-vect.png) no-repeat;
    height: 100vh;
    width: calc(100vw-100px);
    background-size: cover;
    background-position: center;
}

